// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteUser renders as expected 1`] = `
<div>
  <div
    class="amplify-flex"
    style="flex-direction: column;"
  >
    <button
      class="amplify-button amplify-field-group__control"
      data-fullwidth="false"
      type="button"
    >
      Delete Account
    </button>
  </div>
</div>
`;

exports[`DeleteUser renders as expected with components overrides 1`] = `
<div>
  <div
    class="amplify-flex"
    style="flex-direction: column;"
  >
    <button
      class="amplify-button amplify-field-group__control"
      data-fullwidth="false"
      type="button"
    >
      Custom Delete Button
    </button>
  </div>
</div>
`;
